deploy/k8s/gateway/frontend-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cyber-databrew-dev-frontend-route
  namespace: developer-gateway
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: developer-gateway
      namespace: developer-gateway
  hostnames:
    - cyber-databrew-dev.cyberorigin.ai
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: cyber-databrew-frontend-dev-wtttm6suaq-uc.a.run.app
            scheme: https
            statusCode: 302
      matches:
        - path:
            type: PathPrefix
            value: /
